[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game assets/Title Background/Image without mist.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/doomed.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreen/Options.gd" type="Script" id=3]
[ext_resource path="res://TitleScreen/AudioStreamPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 640.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 10
text = "Options"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -68.0
margin_right = 72.0
margin_bottom = 68.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="NinePatchRect/VBoxContainer2"]
margin_right = 144.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"

[node name="Borderless" type="Button" parent="NinePatchRect/VBoxContainer2"]
margin_top = 52.0
margin_right = 144.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "Borderless"

[node name="Back" type="Button" parent="NinePatchRect/VBoxContainer2"]
margin_top = 104.0
margin_right = 144.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="NinePatchRect/VBoxContainer2/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer2/Borderless" to="." method="_on_Borderless_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer2/Back" to="." method="_on_Back_pressed"]
